--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sermas/api-client",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha1",
   "description": "Sermas API client",
   "main": "dist/index.js",
   "scripts": {
