--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sermas/api-client",
-  "version": "1.0.0-alpha11",
+  "version": "1.0.0-alpha.12",
   "description": "Sermas API client",
   "type": "module",
   "main": "./index.js",
