--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0-alpha.15",
   "description": "Sermas API client",
   "type": "module",
-  "main": "./index.js",
+  "main": "./index.cjs",
   "module": "./index.mjs",
   "types": "./index.d.ts",
   "exports": {
-    ".": "./index.js",
+    ".": {
+      "require": "./index.cjs",
+      "import": "./index.mjs",
+      "types": "./index.d.ts"
+    },
     "./package.json": "./package.json"
   },
   "repository": {
